--- a/src/Index.html
+++ b/src/Index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-    <script src="./lib/bala.js"></script>
-    <script src=".lib/fs-data.js"></script>
+    <script type="module" src="watch.js"></script>
 </head>
 
 <body>
-    
+    <nav></nav>
+    <main>
+    </main>
 </body>
 
 </html>
