--- a/src/dir.html
+++ b/src/dir.html
@@ -1,42 +1,44 @@
-
 <!DOCTYPE html>
 
 <html dir="ltr" lang="en">
 
 <head>
-<meta charset="utf-8">
-<meta name="color-scheme" content="light dark">
+  <meta charset="utf-8">
+  <meta name="color-scheme" content="light dark">
 
+  <link rel="stylesheet" href="dir.css">
 
-<title id="title"></title>
+  <script async src="dir.js"></script>
+
+  <title id="title"></title>
 
 </head>
 
 <body>
 
-<h1 id="header">Index of LOCATION</h1>
+  <h1 id="header">Index of LOCATION</h1>
 
-<div id="parentDirLinkBox" style="display:none">
-  <a id="parentDirLink" class="icon up">
-    <span id="parentDirText">[parent directory]</span>
-  </a>
-</div>
+  <div id="parentDirLinkBox" style="display:none">
+    <a id="parentDirLink" class="icon up">
+      <span id="parentDirText">[parent directory]</span>
+    </a>
+  </div>
 
-<table>
-  <thead>
-    <tr class="header" id="theader">
-      <th id="nameColumnHeader" tabindex=0 role="button">Name</th>
-      <th id="sizeColumnHeader" class="detailsColumn" tabindex=0 role="button">
-        Size
-      </th>
-      <th id="dateColumnHeader" class="detailsColumn" tabindex=0 role="button">
-        Date Modified
-      </th>
-    </tr>
-  </thead>
-  <tbody id="tbody">
-  </tbody>
-</table>
+  <table>
+    <thead>
+      <tr class="header" id="theader">
+        <th id="nameColumnHeader" tabindex=0 role="button">Name</th>
+        <th id="sizeColumnHeader" class="detailsColumn" tabindex=0 role="button">
+          Size
+        </th>
+        <th id="dateColumnHeader" class="detailsColumn" tabindex=0 role="button">
+          Date Modified
+        </th>
+      </tr>
+    </thead>
+    <tbody id="tbody">
+    </tbody>
+  </table>
 
 </body>
 
